--- a/package.json
+++ b/package.json
@@ -3,9 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@turf/turf": "^5.1.6",
+    "@vx/legend": "0.0.182",
+    "d3-scale": "^2.1.2",
+    "d3-scale-chromatic": "^1.3.3",
+    "immutable": "^4.0.0-rc.12",
+    "leaflet": "^1.3.4",
+    "lodash": "^4.17.11",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-leaflet": "^2.1.4",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "^2.1.2",
+    "react-table": "^6.8.6",
+    "recompose": "^0.30.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.84.0",
+    "semiotic": "^1.16.0",
+    "simple-statistics": "^6.1.1",
+    "topojson-client": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,5 +37,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {}
 }
