--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "neighborhoods17",
+  "homepage": "https://CT-Data-Haven.github.io/neighborhoods17",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@vx/legend": "0.0.182",
     "d3-scale": "^2.1.2",
     "d3-scale-chromatic": "^1.3.3",
+    "gh-pages": "^2.0.1",
     "leaflet": "^1.3.4",
     "lodash": "^4.17.11",
     "react": "^16.6.3",
@@ -23,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
